# while_analyzer

./: README.md  cabal_run.sh  fourmolu.yaml  run.sh  while-analyzer.cabal
app/: AnnotatedWhile.hs  Args.hs  Main.hs  MarkDown.hs
programs/: constants.md  constants.while  deepNesting.md  deepNesting.while  divisionByZero.md  divisionByZero.while  example.md  example.while  ifBottom.md  ifBottom.while  ifDivisionByZero.md  ifDivisionByZero.while  noInputState.md  noInputState.while
src/: Alarms.hs  ExtendedInt.hs  ProgramState.hs  State.hs  Utils.hs
src/Abstract/: Aexp.hs  Bexp.hs  Domain.hs  ErrorProductState.hs  ErrorProductState.hs-boot  State.hs  Value.hs  While.hs
src/Abstract/Semantics/: Aexp.hs  Bexp.hs  While.hs
src/Ast/: AexpAst.hs  BexpAst.hs  ProgramAst.hs  WhileAst.hs
src/Domains/: Error.hs
src/Domains/Error/: Error.hs  Product.hs
src/Domains/Interval/: Arithmetics.hs  Bounds.hs  Interval.hs  Interval.hs-boot
src/Interval/: Arithmetics.hs  Bounds.hs  ExtendedInt.hs  Interval.hs  Interval.hs-boot
src/Parser/: AbstractStateParser.hs  AexpParser.hs  BexpParser.hs  IntervalParser.hs  ProgramParser.hs  UtilsParser.hs  WhileParser.hs
