cabal-version: 3.4
name:          while-analyzer
version:       1.0
synopsis:      A program analyzer for the toy language While
license:       GPL-3.0-or-later
license-file:  LICENSE
author:        Nicolò Bertocco
maintainer:    nick.bertocco@gmail.com
category:      Development
build-type:    Simple

common opts
  ghc-options:        -Wall
  build-depends:
    , base        ^>=4.20.0.0 && <5.0
    , containers  >=0.7       && <0.8
    , text        >=2.1.2     && <3.0

  default-language:   GHC2021
  default-extensions: OverloadedStrings

library
  import:          opts
  hs-source-dirs:  src
  exposed-modules:
    Abstract.Aexp
    Abstract.Bexp
    Abstract.Domain
    Abstract.State
    Abstract.Value
    Abstract.While
    Ast.AexpAst
    Ast.BexpAst
    Ast.ProgramAst
    Ast.WhileAst
    Interval.Arithmetics
    Interval.Bounds
    Interval.ExtendedInt
    Interval.Interval
    Parser.AbstractStateParser
    Parser.AexpParser
    Parser.BexpParser
    Parser.IntervalParser
    Parser.ProgramParser
    Parser.UtilsParser
    Parser.WhileParser
    State
    Utils

  build-depends:
    , megaparsec          >=9.7.0  && <10.0
    , parser-combinators  >=1.3.0  && <1.4
    , uuid                >=1.3.16 && <1.4

executable while-analyzer-exec
  import:         opts
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    Args
    MarkDown

  build-depends:
    , deepseq               >=1.5.0.0  && <1.6
    , filepath              >=1.5.4.0  && <1.6
    , mtl                   >=2.3.1    && <2.4
    , optparse-applicative  >=0.18.1.0 && <0.19
    , while-analyzer
